All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/Service_Group_Members__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Service Group enables definition of your entire service organization. Service group definition includes details of group members, products in which the group specializes in, the skills available in the group, typical service delivery costs as well as geographies covered by the group.</description>
    <label>Technician/Equipment</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technician/Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>