All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Average_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Drive_Time__c</fullName>
    <label>Average Drive Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>