All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Break_Type__c.field-meta.xml
<CustomField>
    <fullName>Break_Type__c</fullName>
    <description>Type of break: Fixed or Floating. Not used</description>
    <label>Break Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Time Window</fullName>
                <default>true</default>
                <label>Time Window</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>