All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the technician</description>
    <inlineHelpText>Email of the technician</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>