All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Enable_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Enable_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the technician&apos;s calendar must be managed by ServiceMax. Applies to third-party technicians and equipment that are not linked to a Salesforce user</description>
    <label>Enable Scheduling</label>
    <type>Checkbox</type>
</CustomField>