All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician&apos;s inventory location</description>
    <label>Inventory Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Technician/Equipment</relationshipLabel>
    <relationshipName>Service_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>