All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Latitude_Home__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Home__c</fullName>
    <description>Home address location north or south of the equator.</description>
    <inlineHelpText>Home address location north or south of the equator.</inlineHelpText>
    <label>Home Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>