All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Longitude_Home__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Home__c</fullName>
    <description>Home address east west geographic coordinate measurement.</description>
    <inlineHelpText>Home address  east west geographic coordinate measurement.</inlineHelpText>
    <label>Home Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>