All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Max_Daily_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Daily_Hours__c</fullName>
    <description>Limits on number of hours of work order activity per day. Though this option is available, it is recommended to use business hours and break hours to indicate technician’s availability. Used in dispatch optimization</description>
    <label>Max Daily Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>