All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Member_information__c.field-meta.xml
<CustomField>
    <fullName>Member_information__c</fullName>
    <description>Additional information about the member relevant to service delivery</description>
    <inlineHelpText>Additional information about the member relevant to service delivery</inlineHelpText>
    <label>Member information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>