All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Per_Hour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Per_Hour_Cost__c</fullName>
    <description>Average cost of technician’s time. Used in dispatch optimization</description>
    <label>Per Hour Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>