All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the member in the group.</description>
    <inlineHelpText>Role of the member in the group.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Partner Engineer</fullName>
            </value>
            <value>
                <fullName>Partner Manager</fullName>
            </value>
            <value>
                <fullName>Planner</fullName>
            </value>
            <value>
                <fullName>R&amp;D Engineer</fullName>
            </value>
            <value>
                <fullName>Repair Center Engineer</fullName>
            </value>
            <value>
                <fullName>Repair Center Manager</fullName>
            </value>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Service Engineer</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Support Engineer</fullName>
            </value>
            <value>
                <fullName>Support Manager</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>