All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in ServiceMax screens to manage record selection</description>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>