All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service territory to which this technician belongs. Reference to an existing Territory record in ServiceMax</description>
    <label>Service Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Technician/Equipment</relationshipLabel>
    <relationshipName>Service_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>