All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>“Street” part of the technician&apos;s address</description>
    <inlineHelpText>“Street” part of the technician&apos;s address</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>