All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the technician is a salesforce user or third party vendor</description>
    <inlineHelpText>Indicates if the technician is a salesforce user or third party vendor</inlineHelpText>
    <label>Third Party</label>
    <type>Checkbox</type>
</CustomField>