All_Component_DX/force-app/main/default/objects/Service_Group_Members__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>“Zip code” part of the technician&apos;s address</description>
    <inlineHelpText>“Zip code” part of the technician&apos;s address</inlineHelpText>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>